--- a/Charts/Views/Home/Index.cshtml
+++ b/Charts/Views/Home/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+
 <!--Div that will hold the pie chart-->
 <div class="container" id="chart_div"></div>
+<div class="container" id="chart_client"></div>
 
 <!--Load the AJAX API-->
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<!--Load the AJAX API-->
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script type="text/javascript">
 
     // Load the Visualization API and the corechart package.
@@ -19,24 +24,23 @@
     // instantiates the pie chart, passes in the data and
     // draws it.
     function drawChart() {
-        var json = JSON.parse(@ViewBag.Json);
-        // Create the data table.
-        var data = new google.visualization.DataTable(json);
-        data.addColumn('string', 'Labels');
-        data.addColumn('number', 'Values');
-        data.addRows([
-            ['@ViewBag.Labels[0]', @Int32.Parse(ViewBag.Values[0])],
-            ['@ViewBag.Labels[1]', @Int32.Parse(ViewBag.Values[1])],
-            ['@ViewBag.Labels[2]', @Int32.Parse(ViewBag.Values[2])],
-            ['@ViewBag.Labels[3]', @Int32.Parse(ViewBag.Values[3])]
-        ]);
 
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Department');
+        data.addColumn('number', 'Requests');
+        data.addRows([
+            ['@ViewBag.Labels[0]', @ViewBag.Values[0]],
+            ['@ViewBag.Labels[1]', @ViewBag.Values[1]],
+            ['@ViewBag.Labels[2]', @ViewBag.Values[2]],
+            ['@ViewBag.Labels[3]', @ViewBag.Values[3]]
+        ]);
 
         // Set chart options
         var options = {
-            'title': 'How Many Requests',
-            'width': 800,
-            'height': 800
+            'title': 'Requests per Month',
+            'width': 400,
+            'height': 300
         };
 
         // Instantiate and draw our chart, passing in some options.
@@ -44,3 +48,152 @@
         chart.draw(data, options);
     }
 </script>
+
+<script src="jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.7.7/xlsx.core.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xls/0.7.4-a/xls.core.min.js"></script>
+<style>
+    table {
+        margin-top: 20px;
+        border-collapse: collapse;
+        display: none;
+    }
+
+        table th, table td {
+            border: 1px solid #000;
+            padding: 5px 10px;
+        }
+</style>
+<form id="form1" runat="server">
+    <label for="fileInput">Excel file:</label>
+    <input name="fileInput" type="file" id="excelfile" class="input-lg" />
+    <input type="button" id="viewfile" value="Export To Table" onclick="ExportToTable()" />
+    <br />
+    <br />
+    <table id="exceltable"></table>
+    <script type="text/javascript">
+        function ExportToTable() {
+            var regex = /^([a-zA-Z0-9\s_\\.\-:])+(.xlsx|.xls)$/;
+            /*Checks whether the file is a valid excel file*/
+            if (regex.test($("#excelfile").val().toLowerCase())) {
+                var xlsxflag = false; /*Flag for checking whether excel is .xls format or .xlsx format*/
+                if ($("#excelfile").val().toLowerCase().indexOf(".xlsx") > 0) {
+                    xlsxflag = true;
+                }
+                /*Checks whether the browser supports HTML5*/
+                if (typeof (FileReader) != "undefined") {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        var data = e.target.result;
+                        /*Converts the excel data in to object*/
+                        if (xlsxflag) {
+                            var workbook = XLSX.read(data, { type: 'binary' });
+                        }
+                        else {
+                            var workbook = XLS.read(data, { type: 'binary' });
+                        }
+                        /*Gets all the sheetnames of excel in to a variable*/
+                        var sheet_name_list = workbook.SheetNames;
+
+                        var cnt = 0; /*This is used for restricting the script to consider only first sheet of excel*/
+                        sheet_name_list.forEach(function (y) { /*Iterate through all sheets*/
+                            /*Convert the cell value to Json*/
+                            if (xlsxflag) {
+                                var exceljson = XLSX.utils.sheet_to_json(workbook.Sheets[y]);
+                            }
+                            else {
+                                var exceljson = XLS.utils.sheet_to_row_object_array(workbook.Sheets[y]);
+                            }
+                            if (exceljson.length > 0 && cnt == 0) {
+                                DrawClientChart(exceljson);
+                                BindTable(exceljson, '#exceltable');
+                                cnt++;
+                            }
+                        });
+                        $('#exceltable').show();
+                    }
+                    if (xlsxflag) {/*If excel file is .xlsx extension than creates a Array Buffer from excel*/
+                        reader.readAsArrayBuffer($("#excelfile")[0].files[0]);
+                    }
+                    else {
+                        reader.readAsBinaryString($("#excelfile")[0].files[0]);
+                    }
+                }
+                else {
+                    alert("Sorry! Your browser does not support HTML5!");
+                }
+            }
+            else {
+                alert("Please upload a valid Excel file!");
+            }
+        }
+
+
+        function BindTable(jsondata, tableid) {/*Function used to convert the JSON array to Html Table*/
+            alert(JSON.stringify(jsondata));
+            var columns = BindTableHeader(jsondata, tableid); /*Gets all the column headings of Excel*/
+            for (var i = 0; i < jsondata.length; i++) {
+                var row$ = $('<tr/>');
+                for (var colIndex = 0; colIndex < columns.length; colIndex++) {
+                    var cellValue = jsondata[i][columns[colIndex]];
+                    if (cellValue == null)
+                        cellValue = "";
+                    row$.append($('<td/>').html(cellValue));
+                }
+                $(tableid).append(row$);
+            }
+        }
+
+
+        function BindTableHeader(jsondata, tableid) {/*Function used to get all column names from JSON and bind the html table header*/
+            var columnSet = [];
+            var headerTr$ = $('<tr/>');
+            for (var i = 0; i < jsondata.length; i++) {
+                var rowHash = jsondata[i];
+                for (var key in rowHash) {
+                    if (rowHash.hasOwnProperty(key)) {
+                        if ($.inArray(key, columnSet) == -1) {/*Adding each unique column names to a variable array*/
+                            columnSet.push(key);
+                            headerTr$.append($('<th/>').html(key));
+                        }
+                    }
+                }
+            }
+            $(tableid).append(headerTr$);
+            return columnSet;
+        }
+
+        function DrawClientChart(jsondata) {
+            var objs = JSON.parse(JSON.stringify(jsondata)); 
+            // Load the Visualization API and the corechart package.
+            google.charts.load('current', { 'packages': ['corechart'] });
+
+            // Set a callback to run when the Google Visualization API is loaded.
+            google.charts.setOnLoadCallback(drawChart);
+
+            // Callback that creates and populates a data table,
+            // instantiates the pie chart, passes in the data and
+            // draws it.
+                var names = [];
+                // Create the data table.
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'Name');
+                data.addColumn('number', 'Years');
+                for (var i = 0; i < objs.length; i++) {
+                    data.addRow([objs[i].Name, Number(objs[i].Experience)]);
+                }
+
+                // Set chart options
+                var options = {
+                    'title': 'Name and Experience Years',
+                    'width': 400,
+                    'height': 300
+                };
+                alert(JSON.stringify(data));
+                // Instantiate and draw our chart, passing in some options.
+                var chart = new google.visualization.PieChart(document.getElementById('chart_client'));
+                chart.draw(data, options);
+            return null;
+        }
+    </script>
+</form>
